--- a/css/header.css
+++ b/css/header.css
@@ -7,7 +7,9 @@ html, body{
   font-family: Inter, system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
   background: #F6F7F8;
   scrollbar-width: none;
- 
+  overscroll-behavior-x: none !important;
+  
+  
   
 }
 
@@ -17,6 +19,7 @@ html, body{
   display:flex;
   min-height:100dvh;
   width:100%;
+  
   
   
 }
@@ -43,6 +46,8 @@ html, body{
   padding:32px 24px;
   min-width:0;
   
+
+  
 }
 
 .sidebar{
@@ -52,7 +57,8 @@ html, body{
   color:#fff;
   display:flex;
   flex-direction:column;
-  padding:64px 0 40px 0;
+  padding: 64px 0 40px 0;
+  
  
 }
 
@@ -433,3 +439,4 @@ html, body{
   .menu a{ padding:8px 6px; gap:4px; }
   .menu img{ width:20px; height:20px; }
 }
+
